Move CloudFront OAIs to stack parameters

--- a/stacks/apps-200A.yml
+++ b/stacks/apps-200A.yml
@@ -45,6 +45,7 @@ Parameters:
   AugurySharedAlbListenerRulePriorityPrefix: { Type: String }
 
   BetaPrxOrgArchiveS3ObjectVersion: { Type: String }
+  BetaPrxOrgCloudFrontOai: { Type: String }
 
   CastleEcrImageTag: { Type: String }
   CastleSecretsVersion: { Type: String }
@@ -119,7 +120,7 @@ Resources:
         CodeS3Bucket: !Ref DeploymentPackageBucketName
         StaticSiteArchiveS3ObjectVersion: !Ref BetaPrxOrgArchiveS3ObjectVersion
         EnvironmentType: !Ref EnvironmentType
-        StaticSiteCloudFrontOai: !Sub /prx/${EnvironmentTypeAbbreviation}/beta.prx.org/CLOUDFRONT_OAI # TODO Multi-region refactor
+        StaticSiteCloudFrontOai: !Ref BetaPrxOrgCloudFrontOai
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
