--- a/stacks/apps-400A.yml
+++ b/stacks/apps-400A.yml
@@ -7,13 +7,13 @@ Parameters:
   TemplateUrlPrefix: { Type: String }
   CloudFormationNotificationArn: { Type: String }
   EnvironmentType: { Type: String }
-  EnvironmentTypeAbbreviation: { Type: String }
   RootStackName: { Type: String }
   RootStackId: { Type: String }
   DeploymentPackageBucketName: { Type: String }
   S3StaticSiteDeployServiceToken: { Type: String }
 
   BacksawArchiveS3ObjectVersion: { Type: String }
+  BacksawCloudFrontOai: { Type: String }
 
 Resources:
   BacksawStack:
@@ -28,7 +28,7 @@ Resources:
         CodeS3Bucket: !Ref DeploymentPackageBucketName
         StaticSiteArchiveS3ObjectVersion: !Ref BacksawArchiveS3ObjectVersion
         EnvironmentType: !Ref EnvironmentType
-        StaticSiteCloudFrontOai: !Sub /prx/${EnvironmentTypeAbbreviation}/backsaw.prx.org/CLOUDFRONT_OAI # TODO Multi-region refactor
+        StaticSiteCloudFrontOai: !Ref BacksawCloudFrontOai
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
