--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -118,10 +118,10 @@ Parameters:
     Type: String
   ProxyPrxOrgCodeS3ObjectVersion:
     Type: String
-  BetaPrxOrgArchiveS3ObjectVersion:
-    Type: String
-  BacksawArchiveS3ObjectVersion:
-    Type: String
+  BetaPrxOrgArchiveS3ObjectVersion: { Type: String }
+  BetaPrxOrgCloudFrontOai: { Type: String }
+  BacksawArchiveS3ObjectVersion: { Type: String }
+  BacksawCloudFrontOai: { Type: String }
   SharedResourceSharePrincipals:
     Type: CommaDelimitedList
   # Parameter Overrides from the CodePipeline action
@@ -1036,6 +1036,7 @@ Resources:
   #       AugurySharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Augury, prefix]
 
   #       BetaPrxOrgArchiveS3ObjectVersion: !Ref BetaPrxOrgArchiveS3ObjectVersion
+  #       BetaPrxOrgCloudFrontOai: !Ref BetaPrxOrgCloudFrontOai
 
   #       CastleEcrImageTag: !Ref CastleEcrImageTag
   #       CastleSecretsVersion: !Ref CastleSecretsVersion
@@ -1168,7 +1169,6 @@ Resources:
         TemplateUrlPrefix: !Sub ${Constants.TemplateUrlBase}/stacks/apps
         CloudFormationNotificationArn: !GetAtt Constants.CloudFormationNotificationArn
         EnvironmentType: !Ref EnvironmentType
-        EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
         RootStackName: !GetAtt Constants.RootStackName
         RootStackId: !GetAtt Constants.RootStackId
         DeploymentPackageBucketName: !GetAtt Constants.DeploymentPackageBucketName
@@ -1177,6 +1177,7 @@ Resources:
         # App-specific parameters
 
         BacksawArchiveS3ObjectVersion: !Ref BacksawArchiveS3ObjectVersion
+        BacksawCloudFrontOai: !Ref BacksawCloudFrontOai
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
