--- a/stacks/apps/beta.yml
+++ b/stacks/apps/beta.yml
@@ -12,7 +12,7 @@ Parameters:
   CodeS3Bucket: { Type: String }
   StaticSiteArchiveS3ObjectVersion: { Type: String }
   EnvironmentType: { Type: String }
-  StaticSiteCloudFrontOai: { Type: "AWS::SSM::Parameter::Value<String>" }
+  StaticSiteCloudFrontOai: { Type: String }
 
 Resources:
   S3StaticDeployService:
