--- a/stacks/apps-200A.yml
+++ b/stacks/apps-200A.yml
@@ -357,3 +357,10 @@ Resources:
 Outputs:
   StackName:
     Value: !Ref AWS::StackName
+
+  FeederVanityAlbDomain:
+    Value: !GetAtt FeederStack.Outputs.VanityAlbDomain
+  FeederAlbName:
+    Value: !GetAtt FeederStack.Outputs.AlbName
+  CastleRedisCacheName:
+    Value: !GetAtt CastleStack.Outputs.RedisCacheName
