--- a/stacks/apps/backsaw.yml
+++ b/stacks/apps/backsaw.yml
@@ -2,8 +2,8 @@
 AWSTemplateFormatVersion: "2010-09-09"
 
 Description: >-
-  Backsaw static site deployment. Intended to be hosted by a CloudFront
-  distribution that is managed separately.
+  Creates a regional S3 bucket for Backsaw to be used as an origin for a
+  multi-origin CloudFront distribution that is managed elsewhere.
 
 Parameters:
   S3StaticSiteDeployServiceToken: { Type: String }
