--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -15,126 +15,74 @@ Description: >-
 
 Parameters:
   # Required
-  AwsOrganizationId:
-    Type: String
+  AwsOrganizationId: { Type: String }
   AsgKeyPairName:
     Description: >
       The EC2 key pair used for instances in the Auto Scaling
       group (region-specific)
     Type: AWS::EC2::KeyPair::KeyName
-  EcrRegion:
-    Type: String
+  EcrRegion: { Type: String }
   EnvironmentType:
     Type: String
     AllowedValues:
       - Staging
       - Production
   # Application Specific
-  AuguryEcrImageTag:
-    Type: String
-  AugurySecretsVersion:
-    Type: String
-  RemixEcrImageTag:
-    Type: String
-  RemixSecretsVersion:
-    Type: String
-  NetworksEcrImageTag:
-    Type: String
-  NetworksSecretsVersion:
-    Type: String
-  MetricsEcrImageTag:
-    Type: String
-  MetricsSecretsVersion:
-    Type: String
-  StyleguideEcrImageTag:
-    Type: String
-  StyleguideSecretsVersion:
-    Type: String
-  CastleEcrImageTag:
-    Type: String
-  CastleSecretsVersion:
-    Type: String
-  CmsEcrImageTag:
-    Type: String
-  CmsSecretsVersion:
-    Type: String
-  CourierEcrImageTag:
-    Type: String
-  CourierSecretsVersion:
-    Type: String
-  DovetailEcrImageTag:
-    Type: String
-  DovetailSecretsVersion:
-    Type: String
-  DovetailRouterEcrImageTag:
-    Type: String
-  DovetailrouterSecretsVersion:
-    Type: String
-  ExchangeEcrImageTag:
-    Type: String
-  ExchangeSecretsVersion:
-    Type: String
-  FeederEcrImageTag:
-    Type: String
-  FeederSecretsVersion:
-    Type: String
-  IdEcrImageTag:
-    Type: String
-  IdSecretsVersion:
-    Type: String
-  PlayEcrImageTag:
-    Type: String
-  PlaySecretsVersion:
-    Type: String
-  PublishEcrImageTag:
-    Type: String
-  PublishSecretsVersion:
-    Type: String
-  GroveEcrImageTag:
-    Type: String
-  GroveSecretsVersion:
-    Type: String
-  IframelyEcrImageTag:
-    Type: String
-  IframelySecretsVersion:
-    Type: String
-  RadiotopiaTowerLambdaCodeS3ObjectVersion:
-    Type: String
-  PixelPrxOrgCodeS3ObjectVersion:
-    Type: String
-  UploadLambdaCodeS3ObjectVersion:
-    Type: String
-  AnalyticsIngestLambdaCodeS3ObjectVersion:
-    Type: String
-  DovetailStitchLambdaCodeS3ObjectVersion:
-    Type: String
-  DovetailBytesLambdaCodeS3ObjectVersion:
-    Type: String
-  DovetailCountsLambdaCodeS3ObjectVersion:
-    Type: String
-  DovetailTrafficLambdaCodeS3ObjectVersion:
-    Type: String
-  DovetailCdnArrangerCodeS3ObjectVersion:
-    Type: String
-  ProxyPrxOrgCodeS3ObjectVersion:
-    Type: String
+  AuguryEcrImageTag: { Type: String }
+  AugurySecretsVersion: { Type: String }
+  RemixEcrImageTag: { Type: String }
+  RemixSecretsVersion: { Type: String }
+  NetworksEcrImageTag: { Type: String }
+  NetworksSecretsVersion: { Type: String }
+  MetricsEcrImageTag: { Type: String }
+  MetricsSecretsVersion: { Type: String }
+  StyleguideEcrImageTag: { Type: String }
+  StyleguideSecretsVersion: { Type: String }
+  CastleEcrImageTag: { Type: String }
+  CastleSecretsVersion: { Type: String }
+  CmsEcrImageTag: { Type: String }
+  CmsSecretsVersion: { Type: String }
+  CourierEcrImageTag: { Type: String }
+  CourierSecretsVersion: { Type: String }
+  DovetailEcrImageTag: { Type: String }
+  DovetailSecretsVersion: { Type: String }
+  DovetailRouterEcrImageTag: { Type: String }
+  DovetailrouterSecretsVersion: { Type: String }
+  ExchangeEcrImageTag: { Type: String }
+  ExchangeSecretsVersion: { Type: String }
+  FeederEcrImageTag: { Type: String }
+  FeederSecretsVersion: { Type: String }
+  IdEcrImageTag: { Type: String }
+  IdSecretsVersion: { Type: String }
+  PlayEcrImageTag: { Type: String }
+  PlaySecretsVersion: { Type: String }
+  PublishEcrImageTag: { Type: String }
+  PublishSecretsVersion: { Type: String }
+  GroveEcrImageTag: { Type: String }
+  GroveSecretsVersion: { Type: String }
+  IframelyEcrImageTag: { Type: String }
+  IframelySecretsVersion: { Type: String }
+  RadiotopiaTowerLambdaCodeS3ObjectVersion: { Type: String }
+  PixelPrxOrgCodeS3ObjectVersion: { Type: String }
+  UploadLambdaCodeS3ObjectVersion: { Type: String }
+  AnalyticsIngestLambdaCodeS3ObjectVersion: { Type: String }
+  DovetailStitchLambdaCodeS3ObjectVersion: { Type: String }
+  DovetailBytesLambdaCodeS3ObjectVersion: { Type: String }
+  DovetailCountsLambdaCodeS3ObjectVersion: { Type: String }
+  DovetailTrafficLambdaCodeS3ObjectVersion: { Type: String }
+  DovetailCdnArrangerCodeS3ObjectVersion: { Type: String }
+  ProxyPrxOrgCodeS3ObjectVersion: { Type: String }
   BetaPrxOrgArchiveS3ObjectVersion: { Type: String }
   BetaPrxOrgCloudFrontOai: { Type: String }
   BacksawArchiveS3ObjectVersion: { Type: String }
   BacksawCloudFrontOai: { Type: String }
-  SharedResourceSharePrincipals:
-    Type: CommaDelimitedList
+  SharedResourceSharePrincipals: { Type: CommaDelimitedList }
   # Parameter Overrides from the CodePipeline action
-  InfrastructureStorageStackName:
-    Type: String
-  NotificationsStackName:
-    Type: String
-  SecretsStackName:
-    Type: String
-  InfrastructureGitCommit:
-    Type: String
-  PipelineExecutionNonce:
-    Type: String
+  InfrastructureStorageStackName: { Type: String }
+  NotificationsStackName: { Type: String }
+  SecretsStackName: { Type: String }
+  InfrastructureGitCommit: { Type: String }
+  PipelineExecutionNonce: { Type: String }
 
 Conditions:
   IsStaging: !Equals [!Ref EnvironmentType, Staging]
@@ -1024,88 +972,90 @@ Resources:
       TemplateURL: !Sub ${Constants.TemplateUrlBase}/stacks/apps-100A.yml
       TimeoutInMinutes: 40
 
-  # Apps200AStack:
-  #   Type: AWS::CloudFormation::Stack
-  #   Condition: IsStaging # TODO
-  #   Properties:
-  #     NotificationARNs:
-  #       - !GetAtt Constants.CloudFormationNotificationArn
-  #     Parameters:
-  #       AuguryEcrImageTag: !Ref AuguryEcrImageTag
-  #       AugurySecretsVersion: !Ref AugurySecretsVersion
-  #       AugurySharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Augury, prefix]
+  Apps200AStack:
+    Type: AWS::CloudFormation::Stack
+    Condition: IsStaging # TODO
+    Properties:
+      NotificationARNs:
+        - !GetAtt Constants.CloudFormationNotificationArn
+      Parameters:
+        TemplateUrlPrefix: !Sub ${Constants.TemplateUrlBase}/stacks/apps
+        CloudFormationNotificationArn: !GetAtt Constants.CloudFormationNotificationArn
+        AlbFullName: !GetAtt SharedAlbStack.Outputs.AlbFullName
+        AlbHttpsListenerArn: !GetAtt SharedAlbStack.Outputs.HttpsListenerArn
+        EcsClusterArn: !GetAtt SharedEcsClusterStack.Outputs.EcsClusterArn
+        EcsClusterName: !GetAtt SharedEcsClusterStack.Outputs.EcsClusterName
+        VpcId: !GetAtt SharedVpcStack.Outputs.VpcId
+        VpcCidrBlock: !GetAtt SharedVpcStack.Outputs.VpcCidrBlock
+        VpcIpv6CidrBlocks: !GetAtt SharedVpcStack.Outputs.VpcIpv6CidrBlocks
+        SecretsBase: !GetAtt Constants.SecretsBaseRegion
+        EcrRegion: !Ref EcrRegion
+        SecretsStackName: !Ref SecretsStackName
+        NotificationsStackName: !Ref NotificationsStackName
+        EnvironmentType: !Ref EnvironmentType
+        EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
+        RootStackName: !GetAtt Constants.RootStackName
+        RootStackId: !GetAtt Constants.RootStackId
+        VpcPublicSubnet1Id: !GetAtt SharedVpcStack.Outputs.PublicSubnet1Id
+        VpcPublicSubnet2Id: !GetAtt SharedVpcStack.Outputs.PublicSubnet2Id
+        VpcPublicSubnet3Id: !GetAtt SharedVpcStack.Outputs.PublicSubnet3Id
+        VpcPrivateSubnet1Id: !GetAtt SharedVpcStack.Outputs.PrivateSubnet1Id
+        VpcPrivateSubnet2Id: !GetAtt SharedVpcStack.Outputs.PrivateSubnet2Id
+        VpcPrivateSubnet3Id: !GetAtt SharedVpcStack.Outputs.PrivateSubnet3Id
+        SharedMemcachedEndpointAddress: !GetAtt PrivateSharedMemcachedStack.Outputs.CacheEndpointAddress
+        SharedMemcachedEndpointPort: !GetAtt PrivateSharedMemcachedStack.Outputs.CacheEndpointPort
+        AmazonSesSmtpCredentialsGeneratorServiceToken: !GetAtt CustomResourcesStack.Outputs.AmazonSesSmtpCredentialsGeneratorServiceToken
+        EchoServiceToken: !GetAtt CustomResourcesStack.Outputs.EchoServiceToken
+        EcsLaunchEndpointsAccessSecurityGroupId: !GetAtt SharedVpcStack.Outputs.EcsLaunchEndpointsAccessSecurityGroupId
+        KmsEndpointAccessSecurityGroupId: !GetAtt SharedVpcStack.Outputs.KmsEndpointAccessSecurityGroupId
+        SharedEcsAsgInstanceSecurityGroupId: !GetAtt SharedEcsAsgStack.Outputs.InstanceSecurityGroupId
+        S3SigningUserName: !GetAtt Apps100AStack.Outputs.S3SigningUserName
+        S3SigningEndpointUrl: !GetAtt Apps100AStack.Outputs.S3SigningEndpointUrl
+        S3SigningAccessKeyId: !GetAtt Apps100AStack.Outputs.S3SigningAccessKeyId
+        S3StaticSiteDeployServiceToken: !GetAtt CustomResourcesStack.Outputs.S3StaticSiteDeployServiceToken
+        DeploymentPackageBucketName: !GetAtt Constants.DeploymentPackageBucketName
 
-  #       BetaPrxOrgArchiveS3ObjectVersion: !Ref BetaPrxOrgArchiveS3ObjectVersion
-  #       BetaPrxOrgCloudFrontOai: !Ref BetaPrxOrgCloudFrontOai
+        # App-specific parameters
 
-  #       CastleEcrImageTag: !Ref CastleEcrImageTag
-  #       CastleSecretsVersion: !Ref CastleSecretsVersion
-  #       CastleSharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Castle, prefix]
+        AuguryEcrImageTag: !Ref AuguryEcrImageTag
+        AugurySecretsVersion: !Ref AugurySecretsVersion
+        AugurySharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Augury, prefix]
 
-  #       ExchangeEcrImageTag: !Ref ExchangeEcrImageTag
-  #       ExchangeSecretsVersion: !Ref ExchangeSecretsVersion
-  #       ExchangeSharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Exchange, prefix]
+        BetaPrxOrgArchiveS3ObjectVersion: !Ref BetaPrxOrgArchiveS3ObjectVersion
+        BetaPrxOrgCloudFrontOai: !Ref BetaPrxOrgCloudFrontOai
 
-  #       FeederEcrImageTag: !Ref FeederEcrImageTag
-  #       FeederSecretsVersion: !Ref FeederSecretsVersion
+        CastleEcrImageTag: !Ref CastleEcrImageTag
+        CastleSecretsVersion: !Ref CastleSecretsVersion
+        CastleSharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Castle, prefix]
 
-  #       NetworksEcrImageTag: !Ref NetworksEcrImageTag
-  #       NetworksSecretsVersion: !Ref NetworksSecretsVersion
-  #       NetworksSharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Networks, prefix]
+        ExchangeEcrImageTag: !Ref ExchangeEcrImageTag
+        ExchangeSecretsVersion: !Ref ExchangeSecretsVersion
+        ExchangeSharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Exchange, prefix]
 
-  #       PublishEcrImageTag: !Ref PublishEcrImageTag
-  #       PublishSecretsVersion: !Ref PublishSecretsVersion
-  #       PublishSharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Publish, prefix]
+        FeederEcrImageTag: !Ref FeederEcrImageTag
+        FeederSecretsVersion: !Ref FeederSecretsVersion
 
-  #       RemixEcrImageTag: !Ref RemixEcrImageTag
-  #       RemixSecretsVersion: !Ref RemixSecretsVersion
-  #       RemixSharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Remix, prefix]
+        NetworksEcrImageTag: !Ref NetworksEcrImageTag
+        NetworksSecretsVersion: !Ref NetworksSecretsVersion
+        NetworksSharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Networks, prefix]
 
-  #       TemplateUrlPrefix: !Sub ${Constants.TemplateUrlBase}/stacks/apps
-  #       CloudFormationNotificationArn: !GetAtt Constants.CloudFormationNotificationArn
-  #       AlbFullName: !GetAtt SharedAlbStack.Outputs.AlbFullName
-  #       AlbHttpsListenerArn: !GetAtt SharedAlbStack.Outputs.HttpsListenerArn
-  #       EcsClusterArn: !GetAtt SharedEcsClusterStack.Outputs.EcsClusterArn
-  #       EcsClusterName: !GetAtt SharedEcsClusterStack.Outputs.EcsClusterName
-  #       VpcId: !GetAtt SharedVpcStack.Outputs.VpcId
-  #       VpcCidrBlock: !GetAtt SharedVpcStack.Outputs.VpcCidrBlock
-  #       VpcIpv6CidrBlocks: !GetAtt SharedVpcStack.Outputs.VpcIpv6CidrBlocks
-  #       SecretsBase: !GetAtt Constants.SecretsBaseRegion
-  #       EcrRegion: !Ref EcrRegion
-  #       SecretsStackName: !Ref SecretsStackName
-  #       NotificationsStackName: !Ref NotificationsStackName
-  #       EnvironmentType: !Ref EnvironmentType
-  #       EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
-  #       RootStackName: !GetAtt Constants.RootStackName
-  #       RootStackId: !GetAtt Constants.RootStackId
-  #       VpcPublicSubnet1Id: !GetAtt SharedVpcStack.Outputs.PublicSubnet1Id
-  #       VpcPublicSubnet2Id: !GetAtt SharedVpcStack.Outputs.PublicSubnet2Id
-  #       VpcPublicSubnet3Id: !GetAtt SharedVpcStack.Outputs.PublicSubnet3Id
-  #       VpcPrivateSubnet1Id: !GetAtt SharedVpcStack.Outputs.PrivateSubnet1Id
-  #       VpcPrivateSubnet2Id: !GetAtt SharedVpcStack.Outputs.PrivateSubnet2Id
-  #       VpcPrivateSubnet3Id: !GetAtt SharedVpcStack.Outputs.PrivateSubnet3Id
-  #       SharedMemcachedEndpointAddress: !GetAtt PrivateSharedMemcachedStack.Outputs.CacheEndpointAddress
-  #       SharedMemcachedEndpointPort: !GetAtt PrivateSharedMemcachedStack.Outputs.CacheEndpointPort
-  #       AmazonSesSmtpCredentialsGeneratorServiceToken: !GetAtt CustomResourcesStack.Outputs.AmazonSesSmtpCredentialsGeneratorServiceToken
-  #       EchoServiceToken: !GetAtt CustomResourcesStack.Outputs.EchoServiceToken
-  #       EcsLaunchEndpointsAccessSecurityGroupId: !GetAtt SharedVpcStack.Outputs.EcsLaunchEndpointsAccessSecurityGroupId
-  #       KmsEndpointAccessSecurityGroupId: !GetAtt SharedVpcStack.Outputs.KmsEndpointAccessSecurityGroupId
-  #       SharedEcsAsgInstanceSecurityGroupId: !GetAtt SharedEcsAsgStack.Outputs.InstanceSecurityGroupId
-  #       S3SigningUserName: !GetAtt App100AStack.Outputs.S3SigningUserName
-  #       S3SigningEndpointUrl: !GetAtt App100AStack.Outputs.S3SigningEndpointUrl
-  #       S3SigningAccessKeyId: !GetAtt App100AStack.Outputs.S3SigningAccessKeyId
-  #       S3StaticSiteDeployServiceToken: !GetAtt CustomResourcesStack.Outputs.S3StaticSiteDeployServiceToken
-  #       DeploymentPackageBucketName: !GetAtt Constants.DeploymentPackageBucketName
-  #     Tags:
-  #       - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
-  #       - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
-  #       - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
-  #       - { Key: prx:cloudformation:root-stack-name, Value: !GetAtt Constants.RootStackName }
-  #       - { Key: prx:cloudformation:root-stack-id, Value: !GetAtt Constants.RootStackId }
-  #       - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
-  #       - { Key: prx:dev:application, Value: Common }
-  #     TemplateURL: !Sub ${Constants.TemplateUrlBase}/stacks/apps-200A.yml
-  #     TimeoutInMinutes: 40
+        PublishEcrImageTag: !Ref PublishEcrImageTag
+        PublishSecretsVersion: !Ref PublishSecretsVersion
+        PublishSharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Publish, prefix]
+
+        RemixEcrImageTag: !Ref RemixEcrImageTag
+        RemixSecretsVersion: !Ref RemixSecretsVersion
+        RemixSharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Remix, prefix]
+      Tags:
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !GetAtt Constants.RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !GetAtt Constants.RootStackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:application, Value: Common }
+      TemplateURL: !Sub ${Constants.TemplateUrlBase}/stacks/apps-200A.yml
+      TimeoutInMinutes: 40
 
   Apps300AStack:
     Type: AWS::CloudFormation::Stack
