--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -1158,43 +1158,42 @@ Resources:
       TemplateURL: !Sub ${Constants.TemplateUrlBase}/stacks/resource-groups.yml
       TimeoutInMinutes: 10
 
-  # DashboardsStack:
-  #   Type: AWS::CloudFormation::Stack
-  #   Condition: IsStaging # TODO
-  #   Properties:
-  #     NotificationARNs:
-  #       - !GetAtt Constants.CloudFormationNotificationArn
-  #     Parameters:
-  #       EnvironmentType: !Ref EnvironmentType
-  #       RootStackName: !GetAtt Constants.RootStackName
-  #       RootStackId: !GetAtt Constants.RootStackName
-  #       SharedEcsClusterName: !GetAtt SharedEcsClusterStack.Outputs.EcsClusterName
-  #       SharedVpcId: !GetAtt SharedVpcStack.Outputs.VpcId
-  #       SharedVpcCidrBlock: !GetAtt SharedVpcStack.Outputs.VpcCidrBlock
-  #       SharedVpcFlowLogsLogGroupName: !GetAtt SharedVpcStack.Outputs.FlowLogsLogGroupName
-  #       SharedEcsAsgName: !GetAtt SharedEcsAsgStack.Outputs.AsgName
-  #       SharedAlbName: !GetAtt SharedAlbStack.Outputs.AlbName
-  #       FeederAlbName: !GetAtt ProvisionedStack.Outputs.FeederAlbName
-  #       DovetailAlbName: !GetAtt ProvisionedStack.Outputs.DovetailAlbName
-  #       SharedMemcachedCacheName: !GetAtt PrivateSharedMemcachedStack.Outputs.CacheName
-  #       CastleRedisCacheName: !GetAtt ProvisionedStack.Outputs.CastleRedisCacheName
-  #       ProvisionedStackName: !GetAtt ProvisionedStack.Outputs.StackName
-  #       CmsElasticsearchDomainName: !GetAtt App100AStack.Outputs.CmsElasticsearchDomainName
-  #       SharedAlbVanityDomain: !GetAtt SharedAlbStack.Outputs.VanityAlbDomain
-  #       FeederVanityAlbDomain: !GetAtt ProvisionedStack.Outputs.FeederVanityAlbDomain
-  #       DovetailVanityAlbDomain: !GetAtt ProvisionedStack.Outputs.DovetailVanityAlbDomain
-  #       InfrastructureGitCommit: !Ref InfrastructureGitCommit
-  #       StackResourceGroupName: !GetAtt ResourceGroupsStack.Outputs.StackResourceGroupName
-  #     Tags:
-  #       - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
-  #       - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
-  #       - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
-  #       - { Key: prx:cloudformation:root-stack-name, Value: !GetAtt Constants.RootStackName }
-  #       - { Key: prx:cloudformation:root-stack-id, Value: !GetAtt Constants.RootStackId }
-  #       - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
-  #       - { Key: prx:dev:application, Value: Common }
-  #     TemplateURL: !Sub ${Constants.TemplateUrlBase}/stacks/dashboards.yml
-  #     TimeoutInMinutes: 10
+  DashboardsStack:
+    Type: AWS::CloudFormation::Stack
+    Condition: IsStaging # TODO
+    Properties:
+      NotificationARNs:
+        - !GetAtt Constants.CloudFormationNotificationArn
+      Parameters:
+        EnvironmentType: !Ref EnvironmentType
+        RootStackName: !GetAtt Constants.RootStackName
+        RootStackId: !GetAtt Constants.RootStackName
+        SharedEcsClusterName: !GetAtt SharedEcsClusterStack.Outputs.EcsClusterName
+        SharedVpcId: !GetAtt SharedVpcStack.Outputs.VpcId
+        SharedVpcCidrBlock: !GetAtt SharedVpcStack.Outputs.VpcCidrBlock
+        SharedVpcFlowLogsLogGroupName: !GetAtt SharedVpcStack.Outputs.FlowLogsLogGroupName
+        SharedEcsAsgName: !GetAtt SharedEcsAsgStack.Outputs.AsgName
+        SharedAlbName: !GetAtt SharedAlbStack.Outputs.AlbName
+        FeederAlbName: !GetAtt Apps200AStack.Outputs.FeederAlbName
+        DovetailAlbName: !GetAtt Apps300AStack.Outputs.DovetailAlbName
+        SharedMemcachedCacheName: !GetAtt PrivateSharedMemcachedStack.Outputs.CacheName
+        CastleRedisCacheName: !GetAtt Apps200AStack.Outputs.CastleRedisCacheName
+        CmsElasticsearchDomainName: !GetAtt Apps100AStack.Outputs.CmsElasticsearchDomainName
+        SharedAlbVanityDomain: !GetAtt SharedAlbStack.Outputs.VanityAlbDomain
+        FeederVanityAlbDomain: !GetAtt Apps200AStack.Outputs.FeederVanityAlbDomain
+        DovetailVanityAlbDomain: !GetAtt Apps300AStack.Outputs.DovetailVanityAlbDomain
+        InfrastructureGitCommit: !Ref InfrastructureGitCommit
+        StackResourceGroupName: !GetAtt ResourceGroupsStack.Outputs.StackResourceGroupName
+      Tags:
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !GetAtt Constants.RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !GetAtt Constants.RootStackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:application, Value: Common }
+      TemplateURL: !Sub ${Constants.TemplateUrlBase}/stacks/dashboards.yml
+      TimeoutInMinutes: 10
 
 Outputs:
   PipelineExecutionNonce:
