Fix dashboard resource name

--- a/stacks/dashboards.yml
+++ b/stacks/dashboards.yml
@@ -29,7 +29,7 @@ Parameters:
 #   IsProduction: !Equals [!Ref EnvironmentType, Production]
 
 Resources:
-  Foo:
+  StackOverviewDashboard:
     Type: AWS::CloudWatch::Dashboard
     Properties:
       DashboardBody: !Sub |-
