Add static site buckets to dashboard

--- a/stacks/apps-200A.yml
+++ b/stacks/apps-200A.yml
@@ -355,12 +355,11 @@ Resources:
       TimeoutInMinutes: 20
 
 Outputs:
-  StackName:
-    Value: !Ref AWS::StackName
-
   FeederVanityAlbDomain:
     Value: !GetAtt FeederStack.Outputs.VanityAlbDomain
   FeederAlbName:
     Value: !GetAtt FeederStack.Outputs.AlbName
   CastleRedisCacheName:
     Value: !GetAtt CastleStack.Outputs.RedisCacheName
+  BetaDeployBucketRegionalDomainName:
+    Value: !GetAtt BetaStack.Outputs.DeployBucketRegionalDomainName
