--- a/stacks/apps-400A.yml
+++ b/stacks/apps-400A.yml
@@ -42,5 +42,5 @@ Resources:
       TimeoutInMinutes: 5
 
 Outputs:
-  StackName:
-    Value: !Ref AWS::StackName
+  BacksawDeployBucketRegionalDomainName:
+    Value: !GetAtt BacksawStack.Outputs.DeployBucketRegionalDomainName
