--- a/stacks/apps/backsaw.yml
+++ b/stacks/apps/backsaw.yml
@@ -57,3 +57,7 @@ Resources:
               AWS: !Ref StaticSiteCloudFrontOai
             Resource: !Sub arn:aws:s3:::${BacksawBucket}/*
             Sid: Grant read access to a CloudFront Origin Identity
+
+Outputs:
+  DeployBucketRegionalDomainName:
+    Value: !GetAtt BacksawBucket.RegionalDomainName
