--- a/stacks/apps/beta.yml
+++ b/stacks/apps/beta.yml
@@ -56,3 +56,7 @@ Resources:
               AWS: !Ref StaticSiteCloudFrontOai
             Resource: !Sub arn:aws:s3:::${BetaBucket}/*
             Sid: Grant read access to a CloudFront Origin Identity
+
+Outputs:
+  DeployBucketRegionalDomainName:
+    Value: !GetAtt BetaBucket.RegionalDomainName
