--- a/stacks/dashboards.yml
+++ b/stacks/dashboards.yml
@@ -24,6 +24,8 @@ Parameters:
   DovetailVanityAlbDomain: { Type: String }
   InfrastructureGitCommit: { Type: String }
   StackResourceGroupName: { Type: String }
+  BetaDeployBucketRegionalDomainName: { Type: String }
+  BacksawDeployBucketRegionalDomainName: { Type: String }
 
 # Conditions:
 #   IsProduction: !Equals [!Ref EnvironmentType, Production]
@@ -52,7 +54,7 @@ Resources:
                     "width": 18,
                     "height": 6,
                     "properties": {
-                        "markdown": "\n# Details\n\n- Environment: **${EnvironmentType}**\n- Root stack: **[${RootStackName}](https://console.aws.amazon.com/cloudformation/home?region=${AWS::Region}#/stacks/stackinfo?stackId=${RootStackId})**\n- Infrastructure repository Git commit: **[${InfrastructureGitCommit}](https://github.com/PRX/Infrastructure/commit/${InfrastructureGitCommit})**\n- Shared VPC ID: **[${SharedVpcId}](https://console.aws.amazon.com/vpc/home?region=${AWS::Region}#VpcDetails:VpcId=${SharedVpcId})**\n- Shared VPC CIDR block: **${SharedVpcCidrBlock}**\n- Shared ALB: **${SharedAlbVanityDomain}**\n- Feeder ALB: **[${FeederVanityAlbDomain}](https://${FeederVanityAlbDomain})**\n- Dovetail ALB: **[${DovetailVanityAlbDomain}](https://${DovetailVanityAlbDomain})**\n"
+                        "markdown": "\n# Details\n\n- Environment: **${EnvironmentType}**\n- Root stack: **[${RootStackName}](https://console.aws.amazon.com/cloudformation/home?region=${AWS::Region}#/stacks/stackinfo?stackId=${RootStackId})**\n- Infrastructure repository Git commit: **[${InfrastructureGitCommit}](https://github.com/PRX/Infrastructure/commit/${InfrastructureGitCommit})**\n- Shared VPC ID: **[${SharedVpcId}](https://console.aws.amazon.com/vpc/home?region=${AWS::Region}#VpcDetails:VpcId=${SharedVpcId})**\n- Shared VPC CIDR block: **${SharedVpcCidrBlock}**\n\n- Shared ALB: **${SharedAlbVanityDomain}**\n- Feeder ALB: **[${FeederVanityAlbDomain}](https://${FeederVanityAlbDomain})**\n- Dovetail ALB: **[${DovetailVanityAlbDomain}](https://${DovetailVanityAlbDomain})**\n\n- Backsaw bucket: **${BacksawDeployBucketRegionalDomainName}**\n- Beta bucket: **${BetaDeployBucketRegionalDomainName}**"
                     }
                 },
                 {
