--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -971,7 +971,6 @@ Resources:
         - { Key: prx:dev:application, Value: Common }
       TemplateURL: !Sub ${Constants.TemplateUrlBase}/stacks/apps-100A.yml
       TimeoutInMinutes: 40
-
   Apps200AStack:
     Type: AWS::CloudFormation::Stack
     Condition: IsStaging # TODO
@@ -1056,7 +1055,6 @@ Resources:
         - { Key: prx:dev:application, Value: Common }
       TemplateURL: !Sub ${Constants.TemplateUrlBase}/stacks/apps-200A.yml
       TimeoutInMinutes: 40
-
   Apps300AStack:
     Type: AWS::CloudFormation::Stack
     Condition: IsStaging # TODO
@@ -1108,7 +1106,6 @@ Resources:
         - { Key: prx:dev:application, Value: Common }
       TemplateURL: !Sub ${Constants.TemplateUrlBase}/stacks/apps-300A.yml
       TimeoutInMinutes: 40
-
   Apps400AStack:
     Type: AWS::CloudFormation::Stack
     Condition: IsStaging # TODO
@@ -1249,9 +1246,9 @@ Outputs:
     Description: The resource ID for private subnet 3
     Value: !GetAtt SharedVpcStack.Outputs.PrivateSubnet3Id
 
-  # FeederVanityAlbDomain:
-  #   Condition: IsStaging # TODO
-  #   Value: !GetAtt ProvisionedStack.Outputs.FeederVanityAlbDomain
-  # DovetailVanityAlbDomain:
-  #   Condition: IsStaging # TODO
-  #   Value: !GetAtt ProvisionedStack.Outputs.DovetailVanityAlbDomain
+  FeederVanityAlbDomain:
+    Condition: IsStaging # TODO
+    Value: !GetAtt Apps200AStack.Outputs.FeederVanityAlbDomain
+  DovetailVanityAlbDomain:
+    Condition: IsStaging # TODO
+    Value: !GetAtt Apps300AStack.Outputs.DovetailVanityAlbDomain
