--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -1181,8 +1181,8 @@ Resources:
         DovetailVanityAlbDomain: !GetAtt Apps300AStack.Outputs.DovetailVanityAlbDomain
         InfrastructureGitCommit: !Ref InfrastructureGitCommit
         StackResourceGroupName: !GetAtt ResourceGroupsStack.Outputs.StackResourceGroupName
-        BetaDeployBucketRegionalDomainName: !GetAtt Apps200AStack.Ouputs.BetaDeployBucketRegionalDomainName
-        BacksawDeployBucketRegionalDomainName: !GetAtt Apps400AStack.Ouputs.BacksawDeployBucketRegionalDomainName
+        BetaDeployBucketRegionalDomainName: !GetAtt Apps200AStack.Outputs.BetaDeployBucketRegionalDomainName
+        BacksawDeployBucketRegionalDomainName: !GetAtt Apps400AStack.Outputs.BacksawDeployBucketRegionalDomainName
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
