Improve dashboard formatting

--- a/stacks/dashboards.yml
+++ b/stacks/dashboards.yml
@@ -38,7 +38,7 @@ Resources:
         {
             "widgets": [
                 {
-                    "height": 9,
+                    "height": 10,
                     "width": 6,
                     "y": 0,
                     "x": 0,
@@ -52,15 +52,15 @@ Resources:
                     "x": 6,
                     "y": 0,
                     "width": 18,
-                    "height": 6,
+                    "height": 7,
                     "properties": {
-                        "markdown": "\n# Details\n\n- Environment: **${EnvironmentType}**\n- Root stack: **[${RootStackName}](https://console.aws.amazon.com/cloudformation/home?region=${AWS::Region}#/stacks/stackinfo?stackId=${RootStackId})**\n- Infrastructure repository Git commit: **[${InfrastructureGitCommit}](https://github.com/PRX/Infrastructure/commit/${InfrastructureGitCommit})**\n- Shared VPC ID: **[${SharedVpcId}](https://console.aws.amazon.com/vpc/home?region=${AWS::Region}#VpcDetails:VpcId=${SharedVpcId})**\n- Shared VPC CIDR block: **${SharedVpcCidrBlock}**\n\n- Shared ALB: **${SharedAlbVanityDomain}**\n- Feeder ALB: **[${FeederVanityAlbDomain}](https://${FeederVanityAlbDomain})**\n- Dovetail ALB: **[${DovetailVanityAlbDomain}](https://${DovetailVanityAlbDomain})**\n\n- Backsaw bucket: **${BacksawDeployBucketRegionalDomainName}**\n- Beta bucket: **${BetaDeployBucketRegionalDomainName}**"
+                        "markdown": "\n# Details\n\n- Environment: **${EnvironmentType}**\n- Root stack: **[${RootStackName}](https://console.aws.amazon.com/cloudformation/home?region=${AWS::Region}#/stacks/stackinfo?stackId=${RootStackId})**\n- Infrastructure repository Git commit: **[${InfrastructureGitCommit}](https://github.com/PRX/Infrastructure/commit/${InfrastructureGitCommit})**\n- Shared VPC ID: **[${SharedVpcId}](https://console.aws.amazon.com/vpc/home?region=${AWS::Region}#VpcDetails:VpcId=${SharedVpcId})**\n- Shared VPC CIDR block: **${SharedVpcCidrBlock}**\n---\n- Shared ALB: **${SharedAlbVanityDomain}**\n- Feeder ALB: **[${FeederVanityAlbDomain}](https://${FeederVanityAlbDomain})**\n- Dovetail ALB: **[${DovetailVanityAlbDomain}](https://${DovetailVanityAlbDomain})**\n---\n- Backsaw bucket: **${BacksawDeployBucketRegionalDomainName}**\n- Beta bucket: **${BetaDeployBucketRegionalDomainName}**"
                     }
                 },
                 {
                     "type": "metric",
                     "x": 6,
-                    "y": 6,
+                    "y": 7,
                     "width": 6,
                     "height": 3,
                     "properties": {
