Add new root stack parameters

--- a/stacks/apps/cms.yml
+++ b/stacks/apps/cms.yml
@@ -33,9 +33,19 @@ Parameters:
   VpcPrivateSubnet1Id: { Type: "AWS::EC2::Subnet::Id" }
   VpcPrivateSubnet2Id: { Type: "AWS::EC2::Subnet::Id" }
   SharedEcsAsgInstanceSecurityGroupId: { Type: "AWS::EC2::SecurityGroup::Id" }
+  SharedRdsMysqlEndpoint: { Type: String }
+  SharedAuroraMysqlEndpoint: { Type: String }
+  SharedRdsPostgresqlEndpoint: { Type: String }
+  SharedAuroraPostgresqlEndpoint: { Type: String }
 
 Conditions:
   IsProduction: !Equals [!Ref EnvironmentType, Production]
+  HasRdsEndpoints: !And
+    - !Not [!Equals [!Ref SharedRdsMysqlEndpoint, ""]]
+    - !Not [!Equals [!Ref SharedRdsPostgresqlEndpoint, ""]]
+  HasAuroraEndpoints: !And
+    - !Not [!Equals [!Ref SharedAuroraMysqlEndpoint, ""]]
+    - !Not [!Equals [!Ref SharedAuroraPostgresqlEndpoint, ""]]
 
 Resources:
   HostHeaderListenerRule:
