--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -14,6 +14,11 @@ Description: >-
   in separate templates.
 
 Parameters:
+  # Optional
+  SharedRdsMysqlEndpoint: { Type: String, Default: "" }
+  SharedAuroraMysqlEndpoint: { Type: String, Default: "" }
+  SharedRdsPostgresqlEndpoint: { Type: String, Default: "" }
+  SharedAuroraPostgresqlEndpoint: { Type: String, Default: "" }
   # Required
   AwsOrganizationId: { Type: String }
   AsgKeyPairName:
@@ -27,6 +32,11 @@ Parameters:
     AllowedValues:
       - Staging
       - Production
+  RegionMode:
+    Type: String
+    AllowedValues:
+      - Primary
+      - Secondary
   # Application Specific
   AuguryEcrImageTag: { Type: String }
   AugurySecretsVersion: { Type: String }
@@ -935,6 +945,10 @@ Resources:
         AmazonSesSmtpCredentialsGeneratorServiceToken: !GetAtt CustomResourcesStack.Outputs.AmazonSesSmtpCredentialsGeneratorServiceToken
         SharedEcsAsgInstanceSecurityGroupId: !GetAtt SharedEcsAsgStack.Outputs.InstanceSecurityGroupId
         DeploymentPackageBucketName: !GetAtt Constants.DeploymentPackageBucketName
+        SharedRdsMysqlEndpoint: !Ref SharedRdsMysqlEndpoint
+        SharedAuroraMysqlEndpoint: !Ref SharedAuroraMysqlEndpoint
+        SharedRdsPostgresqlEndpoint: !Ref SharedRdsPostgresqlEndpoint
+        SharedAuroraPostgresqlEndpoint: !Ref SharedAuroraPostgresqlEndpoint
 
         # App-specific parameters
 
