--- a/stacks/apps-100A.yml
+++ b/stacks/apps-100A.yml
@@ -24,6 +24,10 @@ Parameters:
   AmazonSesSmtpCredentialsGeneratorServiceToken: { Type: String }
   SharedEcsAsgInstanceSecurityGroupId: { Type: "AWS::EC2::SecurityGroup::Id" }
   DeploymentPackageBucketName: { Type: String }
+  SharedRdsMysqlEndpoint: { Type: String }
+  SharedAuroraMysqlEndpoint: { Type: String }
+  SharedRdsPostgresqlEndpoint: { Type: String }
+  SharedAuroraPostgresqlEndpoint: { Type: String }
 
   CmsEcrImageTag: { Type: String }
   CmsSecretsVersion: { Type: String }
@@ -78,6 +82,10 @@ Resources:
         VpcPrivateSubnet1Id: !Ref VpcPrivateSubnet1Id
         VpcPrivateSubnet2Id: !Ref VpcPrivateSubnet2Id
         SharedEcsAsgInstanceSecurityGroupId: !Ref SharedEcsAsgInstanceSecurityGroupId
+        SharedRdsMysqlEndpoint: !Ref SharedRdsMysqlEndpoint
+        SharedAuroraMysqlEndpoint: !Ref SharedAuroraMysqlEndpoint
+        SharedRdsPostgresqlEndpoint: !Ref SharedRdsPostgresqlEndpoint
+        SharedAuroraPostgresqlEndpoint: !Ref SharedAuroraPostgresqlEndpoint
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
